Revision history for DBIx::Simple::Class

1.009 2015-02-10 16:59:13 GMT
        - Added PostgreSQL tests.
        - Added PRIMARY_KEY_AUTOGENERATED to prevent "null value in column
          violates not-null constraint" PostgreSQL insert errors.

1.008 2014-08-03
        - Fixed logical error in decision to generate the base class or not.
        - Improved documentation.
        - Improved tests.

1.007 2014-08-02 21:06:20 CEST
        - Schema/base class is generated and dumped only if
          "table" argument is not specified or is '%'.

1.006 2014-01-12 01:04:11 CET
        - Fixed wrong documentation for select_by_pk().

1.005 2013-12-29 15:23:18 CET
        - Fixed bug in CHECKS code generation default value.
        - Added "--table" option for dsc_dump_schema.pl

1.004 2013-12-03 23:29:29 CET
        - No __END__ markers in generated code.


1.003 2013-12-03 22:20:41 CET
        - Be more strict on using list and scalar context.
        - Got back $VERSION in DBIx::Simple::Class::Schema
        so it is indexed by PAUSE.

1.002 2013-12-01 00:38:33 CET
        - Calling explicitely Carp::croak().

1.001 2013-11-30 10:41:15 CET
        - Using a real number for perl versions.

1.000 2013-11-29 01:27:46 CET
        - Generated accessors do not call $self->_check()
        but only emulate allow() from Params::Check
        for performance.
        - DBD::SQLite >= 1.37 required for tests 
        for no particular reason.
        - Fixed typo in autogenerated schema.
        - Generated classes pass Perl::Critic "harsh".

0.999 2013-11-26 23:05:56 CET
        - Enhanced autogenerated POD for the base class.

0.998 2013-05-26 17:15:55 EEST
        - Using grep instead of smartmatch oprator(~~).

0.997 2013-04-16 01:26:35 EEST
        - Micro optimizitaions.
        - Removed dependency Module::Load::Conditional.

0.996 2013-04-13 23:41:53 EEST
        - Added META_MERGE section to Makefile.PL
        - Implemented dsc_dump_schema.pl as example for