@@ -1,0 +1,24 @@
+package    #hide
+  My::Window;
+use base qw(My);
+use strict;
+use warnings;
+use utf8;
+
+sub TABLE { 'window' }
+sub COLUMNS { [qw(id offset)] }
+sub WHERE { {} }
+
+# set autogenerated keys and quoting on
+sub PRIMARY_KEY_AUTOGENERATED { 1 };
+sub QUOTE_IDENTIFIERS { 1 };
+
+#See Params::Check
+sub CHECKS {
+  {
+    id     => {allow    => qr/^\d+$/},
+    offset => {required => 1, allow => qr/^\w+$/}
+  }
+}
+
+1;
