@@ -105,7 +105,8 @@ $SQL = {
       my ($pk, $table, @columns) =
         ($class->PRIMARY_KEY, $class->TABLE, @{$class->COLUMNS});
 
-      @columns = grep { $_ ne $class->PRIMARY_KEY } @columns
+      $pk = $class->dbh->quote_identifier($pk) if $class->QUOTE_IDENTIFIERS;
+      @columns = grep { $_ ne $pk } @columns
         if $class->PRIMARY_KEY_AUTOGENERATED;
 
       #return of the do
@@ -448,7 +449,7 @@ sub insert {
   my ($pk, $class) = ($self->PRIMARY_KEY, ref $self);
 
   my @columns = @{$class->_UNQUOTED->{COLUMNS}};
-  @columns = grep { $_ ne $class->PRIMARY_KEY } @columns
+  @columns = grep { $_ ne $pk } @columns
     if $class->PRIMARY_KEY_AUTOGENERATED;
 
   $self->dbh->prepare_cached($SQL_CACHE->{$class}{INSERT} || $class->SQL('INSERT'))
@@ -462,7 +463,7 @@ sub insert {
 
   #user set the primary key already
   return $self->{data}{$pk}
-    ||= $self->dbh->last_insert_id(undef, undef, $self->TABLE, $pk);
+    ||= $self->dbh->last_insert_id(undef, undef, $self->_UNQUOTED->{TABLE}, $pk);
 
 }
 
