@@ -4,6 +4,8 @@ Revision history for DBIx::Simple::Class
         - Added PostgreSQL tests.
         - Added PRIMARY_KEY_AUTOGENERATED to prevent "null value in column
           violates not-null constraint" PostgreSQL insert errors.
+        - Added tests for postgresql reserved table/column names, and
+          interaction of QUOTE_IDENTIFIERS and PRIMARY_KEY_AUTOGENERATED
 
 1.008 2014-08-03
         - Fixed logical error in decision to generate the base class or not.
